--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,12 @@
 {
-    "name": "Awesome Tapes from Africa Player",
-    "description": "Play through Awesome Tapes from Africa playlists.",
-    "version": "0.1.0",
+    "name": "Facebook Footprint",
+    "description": "Show the energy you've spent browsing Facebook.",
+    "version": "0.0.1",
     "manifest_version": 2,
+    "incognito": "split",
+    "chrome_url_overrides": {
+        "newtab": "blank.html"
+    },
     "content_scripts": [{
         "matches": ["http://www.awesometapes.com/*"],
         "js": ["jq.2.min.js", "main.js"]
