--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,9 @@
     "incognito": "split",
     "chrome_url_overrides": {
         "newtab": "blank.html"
+    }, "background": {
+        "scripts": ["background.js"],
+        "persistent": true
     }, "permissions": [
         "tabs", "http://*/*", "https://*/*", "storage", "management"
     ], "browser_action": {
